-
Bug
-
Resolution: Done
-
P2: Important
-
5.6.0, 5.7.0, 5.8.0
-
iOS 10
The issue occurs on iOS 10 only when using the default font ".SF UI Text"
- is duplicated by
-
QTBUG-56991 [iOS 10]: When registering a font and then using it to display numbers it will incorrectly render the number
-
- Closed
-
- relates to
-
QTBUG-63476 Text is now garbled on iOS 11
-
- Closed
-
- resulted from
-
QTBUG-47399 [iOS9] [iOS10] Wrong characters displayed
-
- Closed
-
| For Gerrit Dashboard: QTBUG-56765 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 185664,4 | QCoreTextFontDatabase: fix bug caused by invalidated CTFontDescriptor | 5.9 | qt/qtbase | Status: ABANDONED | -1 | 0 |
| 189030,9 | Populate application fonts via font descriptors on Apple platforms | 5.9 | qt/qtbase | Status: MERGED | +2 | 0 |